--- a/LM-GENERATOR-app/package.json
+++ b/LM-GENERATOR-app/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/next-js": "^2.4.2",
     "@chakra-ui/react": "^2.10.9",
     "@chakra-ui/system": "^2.6.2",
+    "framer-motion": "^12.23.12",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
